--- a/programs/solana-account-model/Cargo.toml
+++ b/programs/solana-account-model/Cargo.toml
@@ -9,6 +9,6 @@ tokio.workspace = true
 solana-client.workspace = true
 solana-commitment-config.workspace = true
 solana-sdk.workspace = true
-bincode = "1.3.3"
-solana-system-interface = "2.0.0"
-spl-token-2022-interface = "2.0.0"
+bincode.workspace = true
+solana-system-interface.workspace = true
+spl-token-2022-interface.workspace = true
