--- a/programs/solana-instructions/Cargo.toml
+++ b/programs/solana-instructions/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow.workspace = true
+tokio.workspace = true
+solana-client.workspace = true
+solana-commitment-config.workspace = true
+solana-sdk .workspace= true
+solana-system-interface.workspace = true
+
