add solana-transactions program to workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [
     "common",
     "programs/solana-account-model",
     "programs/solana-instructions"
-]
+,   "programs/solana-transactions"]
 [workspace.dependencies]
 anyhow = "1.0.100"
 tokio = "1.48.0"
